--- a/css/tidelabNews.css
+++ b/css/tidelabNews.css
@@ -12,6 +12,8 @@ header {
   height: 60px;
   text-align: center;
   justify-content: center;
+  position: sticky;
+  top: 0;
 }
 nav {
   display: flex;
@@ -32,6 +34,9 @@ nav {
 .footer-logo span {
   color: lawngreen;
   font-size: 1.4rem;
+}
+.revert-to-homepage {
+  text-decoration: none;
 }
 .nav-toggle {
   display: none;
@@ -64,11 +69,11 @@ nav {
   background: black;
   left: 0;
   right: 0;
-  bottom: -1.4625rem;
+  bottom: -1.2025rem;
   opacity: 0;
 }
 .nav-link:hover {
-  color: black;
+  color: lawngreen;
 }
 .nav-link:hover::before {
   opacity: 0.75;
@@ -79,6 +84,10 @@ nav {
 .nav-call-to-action a {
   border: 2px solid white;
   border-radius: 5px;
+}
+.nav-call-to-action .subscribe-btn:hover,
+.nav-call-to-action .search-btn:hover {
+  border-color: lawngreen;
 }
 .nav-call-to-action a:first-child {
   padding: 0.5rem 0.5rem;
@@ -439,7 +448,8 @@ footer hr {
 /* //RESPONSIVE DESIGN// */
 @media (max-width: 750px) {
   header {
-    position: relative;
+    position: sticky;
+    top: 0;
   }
   .header-logo {
     margin-left: -1.5rem;
@@ -506,6 +516,7 @@ footer hr {
   }
   .footer-form {
     margin-top: 0.5rem;
+    width: 80%;
   }
   .footer-form a {
     margin-left: 0.3rem;
