--- a/css/metro.css
+++ b/css/metro.css
@@ -6,13 +6,11 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-/* //HEADER SECTION// */
-
+/* Header Section */
 header {
+  margin-right: 0;
+  margin-left: 0;
   background: linear-gradient(to right, #2bb7da, #31d35c);
-  margin-top: -0.45rem;
-  margin-left: -0.35rem;
-  margin-right: -0.45rem;
 }
 nav {
   display: flex;
@@ -89,28 +87,35 @@ nav {
   padding: 0.6rem 0.6rem 0.5rem 0.6rem;
 }
 
-/* //MAIN SECTION// */
-/* Add CSS for main section here */
+/*  MAIN SECTION  */
 
 main {
   display: flex;
   justify-content: space-between;
-  gap: 15px;
   margin-top: 50px;
 }
-.main-whole-section {
+
+.whole-section {
   width: 80%;
 }
-.advertisement-section {
-  width: 20%;
+.span3-name {
+  font-style: italic;
+}
+.span3-div4 {
+  font-weight: bold;
 }
 
+.span4-div {
+  height: 100%;
+  background-size: cover;
+  height: max-content;
+}
 a {
   text-decoration: none;
   color: #000;
 }
 .head {
-  width: 90%;
+  width: 100%;
   text-align: center;
   font-size: 25px;
   margin-top: 50px;
@@ -125,57 +130,31 @@ a {
   background: #fff;
   padding: 0 30px;
 }
-
-/*first section*/
-
 .first-section {
   display: flex;
-  /* justify-content: space-between; */
-  padding-bottom: 70px;
+  justify-content: space-between;
 }
 
-/*.sub-first-section{
-  padding-right: 25px;
-  border-right: 1px solid rgb(224, 213, 213);
-}*/
 .sub-first-section {
-  width: 25%;
-}
-#section-a {
-  padding-bottom: 20px;
-}
-#section-b {
-  padding-top: 10px;
+  padding-right: 25px;
 }
 .sub-second-section {
-  width: 45%;
   padding-left: 25px;
   border-left: 1px solid rgb(224, 213, 213);
   padding-right: 25px;
   border-right: 1px solid rgb(224, 213, 213);
 }
 .sub-third-section {
-  width: 30%;
-  text-align: start;
-}
-
-.span3-name {
-  font-style: italic;
-}
-.span3-name span {
-  padding-left: 30px;
+  padding-left: 25px;
 }
 .span3-all {
-  padding-bottom: 30px;
-  padding-top: 10px;
+  padding-bottom: 10px;
 }
 .span3-div4 {
   padding-bottom: 10px;
-  font-weight: bold;
-  text-align: center;
 }
 
-/*second section*/
+/*2nd section*/
 
 .sub-sec-div img {
   height: 200px;
@@ -185,20 +164,17 @@ a {
   display: flex;
   justify-content: space-between;
   gap: 10px;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 2rem;
 }
 .section2-wrapper-content {
   display: flex;
   justify-content: space-between;
   gap: 10px;
-
-  /* padding-bottom: 200px; */
-
-  padding-bottom: 80px;
+  padding-bottom: 50px;
 }
 
 /*third section*/
+
 .title-wrapper img {
   height: 200px;
   width: 250px;
@@ -207,22 +183,14 @@ a {
   display: flex;
   justify-content: space-between;
   gap: 10px;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 2rem;
 }
 .third-section2-wrapper-content {
   display: flex;
   justify-content: space-between;
   gap: 10px;
-  /* 
-  padding-bottom: 200px;
-
-  padding-bottom: 80px;
- */
+  padding-bottom: 50px;
 }
-
-/* fourth section
-code for the third section*/
 
 /*button section*/
 
@@ -272,10 +240,9 @@ code for the third section*/
   padding: 15px;
   height: 45px;
 }
+
 .advert {
   width: 20%;
-  /* margin-right: 10px;
-  margin-left: 10px; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -285,8 +252,14 @@ code for the third section*/
   margin-bottom: 100px;
 }
 .advert-div p img {
-  width: 150px;
+  margin-left: 40px;
+  width: 90%;
   height: 400px;
+}
+.side-ad {
+  text-align: center;
+  font-size: 10px;
+  font-style: italic;
 }
 
 .ad-name {
@@ -305,96 +278,7 @@ code for the third section*/
   padding-bottom: 40px;
 }
 
-/* //FOOTER SECTION// */
-
-footer {
-  background-color: black;
-  padding-top: 1rem;
-  margin-bottom: -2rem;
-  margin-left: -1rem;
-  margin-right: -1rem;
-}
-header {
-  background: linear-gradient(to right, #2bb7da, #31d35c);
-}
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1.2rem;
-}
-
-.header-logo h3,
-.footer-logo h3 {
-  color: white;
-  font-size: 1.3rem;
-}
-.header-logo h3 {
-  margin-left: 1rem;
-}
-.header-logo span,
-.footer-logo span {
-  color: lawngreen;
-  font-size: 1.4rem;
-}
-.nav-toggle {
-  display: none;
-}
-.nav-checkbox {
-  display: none;
-}
-.nav-menu {
-  display: flex;
-  list-style: none;
-}
-.nav-menu li:not(:last-child) {
-  margin-right: 1.5rem;
-}
-.nav-menu li a,
-.nav-call-to-action a {
-  text-decoration: none;
-  color: white;
-}
-/* hover styles for the nav-link */
-.nav-link {
-  position: relative;
-}
-.nav-link:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  display: block;
-  height: 5px;
-  background: black;
-  left: 0;
-  right: 0;
-  bottom: -1.4625rem;
-  opacity: 0;
-}
-.nav-link:hover {
-  color: black;
-}
-.nav-link:hover::before {
-  opacity: 0.75;
-}
-.nav-call-to-action {
-  margin-right: 2rem;
-}
-.nav-call-to-action a {
-  border: 2px solid white;
-  border-radius: 5px;
-}
-.nav-call-to-action a:first-child {
-  padding: 0.5rem 0.5rem;
-  margin-right: 0.2rem;
-}
-.nav-call-to-action a:last-child {
-  padding: 0.6rem 0.6rem 0.5rem 0.6rem;
-}
-/* //MAIN SECTION/ */
-
-/* //FOOTER SECTION// */
-
+/* //FOOTER// */
 footer {
   background-color: black;
   padding-top: 1rem;
@@ -551,6 +435,7 @@ footer hr {
   width: 90%;
   margin: 1rem auto 1rem auto;
 }
+
 .copyright {
   text-align: center;
   color: white;
@@ -684,7 +569,7 @@ footer hr {
     margin-left: 1.5rem;
   }
   .footer-social-links {
-    width: 60%;
+    width: 55%;
     margin: 0 auto;
   }
   .social-link {
@@ -693,12 +578,12 @@ footer hr {
   }
   .copyright {
     font-weight: 700;
-    /* line-height: 1.4; */
+    line-height: 1.4;
     font-size: 0.8rem;
   }
 }
+/*Responsiveness For very small devices*/
 @media (max-width: 350px) {
-  /*For very small devices*/
   .footer-middle-section {
     justify-content: center;
   }
@@ -717,5 +602,149 @@ footer hr {
   .footer-social-links {
     width: 90%;
     margin-top: 1rem;
+  }
+}
+
+@media (max-width: 750px) {
+  header {
+    position: relative;
+  }
+  .nav-toggle {
+    display: block;
+    position: absolute;
+    cursor: pointer;
+    margin-top: 0.4rem;
+    margin-right: 1rem;
+    right: 0;
+  }
+  nav svg {
+    width: 1.3rem;
+    fill: white;
+  }
+  .close,
+  .nav-checkbox {
+    display: none;
+  }
+
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    margin: 0.1rem 0;
+  }
+  .nav-links {
+    position: absolute;
+    margin-top: 3.3rem;
+    /* left: 50%; */
+    top: 20px;
+    width: 100%;
+  }
+
+  li {
+    display: none;
+    padding: 0.2rem 1rem 0.2rem;
+    font-size: 1.2rem;
+  }
+  .nav-checkbox:checked ~ .nav-links .nav-menu li {
+    display: block;
+  }
+  .nav-checkbox:checked ~ label.nav-toggle .close {
+    display: block;
+  }
+  .nav-checkbox:checked ~ label.nav-toggle .menu {
+    display: none;
+  }
+  .nav-checkbox:checked ~ .nav-links .nav-menu {
+    background-color: black;
+    opacity: 0.9;
+    height: 94vh;
+    padding-top: 2rem;
+    border-radius: 3px;
+  }
+  .nav-call-to-action {
+    display: none;
+  }
+  footer {
+    font-size: 1rem;
+  }
+  .footer-call-to-action a {
+    padding: 0.6rem 0.5rem 0.2rem 0.5rem;
+  }
+  form .search-input {
+    padding: 0.8rem;
+  }
+  .footer-top {
+    flex-direction: column;
+  }
+  .footer-middle-section {
+    flex-wrap: wrap;
+    font-size: 1rem;
+  }
+  .footer-section {
+    margin-left: 1rem;
+    width: 32%;
+  }
+  .footer-section:nth-child(3) {
+    margin-top: 0.5rem;
+  }
+  .footer-section:first-child {
+    margin-left: 1rem;
+  }
+  .footer-section:nth-child(2) {
+    margin-right: 1rem;
+  }
+  .footer-section:last-child {
+    margin-top: 0.5rem;
+    margin-right: 1rem;
+    margin-left: 2rem;
+  }
+  .footer-section .subscribe-btn {
+    padding: 0.4rem 3rem 0.4rem 3rem;
+  }
+  .footer-bottom-section {
+    flex-direction: column;
+    text-align: center;
+  }
+  .footer-bottom-section p {
+    margin-left: 0;
+  }
+  .footer-bottom-section p,
+  .footer-bottom-link {
+    width: 90%;
+  }
+  .mentor-name {
+    text-align: center;
+  }
+}
+
+@media (max-width: 750px) {
+  .advert {
+    width: 100%;
+  }
+  .whole-section {
+    display: block;
+  }
+
+  img {
+    display: block;
+    max-width: 100%;
+    height: 100px;
+    padding: auto;
+  }
+
+  .first-section img {
+    width: 100px;
+    height: 130px;
+  }
+
+  .section-wrapper img {
+    width: 120px;
+    height: 150px;
+  }
+
+  .third-section-wrapper img {
+    width: 120px;
+    height: 150px;
   }
 }
