--- a/css/politics.css
+++ b/css/politics.css
@@ -408,9 +408,7 @@ a {
   .section-5 {
     display: flex;
     flex-wrap: wrap;
-    margin-left: 90px;
-    padding-top: 0px;
-    padding-bottom: 30px;
+   padding: 20px;
   }
   
   .section-6 {
@@ -468,7 +466,8 @@ a {
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     padding-bottom: 150px;
   }
-  
+}
+ 
   @media (max-width: 500px) {
     .right {
       right: 5px;
@@ -550,7 +549,7 @@ a {
       margin-top: 8px;
       font-weight: 200;
     }
-    }
+    
  
 .second-card a {
   font-size:10px;
@@ -608,7 +607,7 @@ a {
 .section-5 {
   display: flex;
   flex-wrap: wrap;
-  margin-left: 50px;
+  margin-left: 15px;
   padding-bottom: 20px;
 }
 
